[package]
name = "tetrimino"
version = "0.0.1"
authors = ["Marenda S.A. <renda_ardy@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.0"
rand = "0.7.3"

[features]
default = ["sdl2/image", "sdl2/ttf"]
